salesforce-litle-MP/src/objects/LitleMappingsSaveLog__c.object
<CustomObject>
    <fields>
        <fullName>subMerchantPspMerchantId__c</fullName>
        <description>Sub Merchant PspMerchantId</description>
        <label>SF SubMerchant PspMerchantId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStateProvinceD__c</fullName>
        <description>Sub Merchant StateProvinceD</description>
        <label>Default SubMerchant StateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStateProvinceX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant StateProvince?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantStateProvince__c</fullName>
        <description>Sub Merchant StateProvince</description>
        <label>SF SubMerchant StateProvince</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress1D__c</fullName>
        <description>Sub Merchant StreetAddress1D</description>
        <label>Default SubMerchant StreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress1X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant StreetAddress1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress1__c</fullName>
        <description>Sub Merchant StreetAddress1</description>
        <label>SF SubMerchant StreetAddress1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress2D__c</fullName>
        <description>Sub Merchant StreetAddress2D</description>
        <label>Default SubMerchant StreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress2X__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant StreetAddress2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantStreetAddress2__c</fullName>
        <description>Sub Merchant StreetAddress2</description>
        <label>SF SubMerchant StreetAddress2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantUrlD__c</fullName>
        <description>Sub Merchant UrlD</description>
        <label>Default SubMerchant Url</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantUrlX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant Url?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchantUrl__c</fullName>
        <description>Sub Merchant Url</description>
        <label>SF SubMerchant Url</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckBillingDescD__c</fullName>
        <description>Sub Merchant eCheckBillingDescriptorD</description>
        <label>Default eCheckBillingDescriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckBillingDescriptorX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default eCheckBillingDescriptor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckBillingDescriptor__c</fullName>
        <description>Sub Merchant eCheckBillingDescriptor</description>
        <label>SF eCheckBillingDescriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckCompanyNameD__c</fullName>
        <description>Sub Merchant eCheckCompanyNameD</description>
        <label>Default SubMerchant eCheckCompanyName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckCompanyNameX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default SubMerchant eCheckCompanyName?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subMerchanteCheckCompanyName__c</fullName>
        <description>Sub Merchant eCheckCompanyName</description>
        <label>SF SubMerchant eCheckCompanyName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>LitleMappingsSaveLog</label>
    <listViews>
        <fullName>LitleLogView</fullName>
        <columns>NAME</columns>
        <columns>legalEntityNameD__c</columns>
        <columns>subMerchantFirstNameD__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>LitleLogView</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LogId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LitleMappingsSaveLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>